--- a/package.json
+++ b/package.json
@@ -7,22 +7,19 @@
     "deploy": "yarn build:contract && cd contract && near dev-deploy --wasmFile ./target/wasm32-unknown-unknown/release/recur.wasm",
     "deploy_testnet": "yarn build:contract && cd contract && near deploy --wasmFile ./target/wasm32-unknown-unknown/release/recur.wasm --accountId nft-rental.testnet",
     "deploy_mainnet": "yarn build:contract && cd contract && NEAR_ENV=mainnet near deploy --wasmFile ./target/wasm32-unknown-unknown/release/recur.wasm --accountId nft-rental.near",
-    "deploy:demo_nft": "yarn build:demo_nft && cd demo_nft_contract && near dev-deploy --wasmFile ./target/wasm32-unknown-unknown/release/tamagotchi.wasm",
-    "deploy_testnet:demo_nft": "yarn build:demo_nft && cd demo_nft_contract && near deploy --wasmFile ./target/wasm32-unknown-unknown/release/tamagotchi.wasm --accountId tamagotchi-nft.testnet",
     "preview": "cd frontend && yarn vite preview",
-    "preview:demo": "cd demo_nft_frontend && yarn vite preview",
+    "preview:demo": "cd demo_frontend && yarn vite preview",
     "build": "yarn build:contract && yarn build:web",
     "build:web": "cd frontend && yarn build",
     "build_testnet:web": "cd frontend && yarn build_testnet",
     "build_mainnet:web": "cd frontend && yarn build_mainnet",
     "build:contract": "cd contract && rustup target add wasm32-unknown-unknown && cargo build --all --target wasm32-unknown-unknown --release",
-    "build:demo_nft": "cd demo_nft_contract && rustup target add wasm32-unknown-unknown && cargo build --all --target wasm32-unknown-unknown --release",
-    "build_testnet:demo_web": "cd demo_nft_frontend && yarn build_testnet",
+    "build_testnet:demo_web": "cd demo_frontend && yarn build_testnet",
     "test": "yarn test:unit && yarn test:integration",
     "test:unit": "cd contract && cargo test",
     "test:integration": "yarn build:contract && cd integration-tests && cargo run --example integration-tests \"../contract/target/wasm32-unknown-unknown/release/recur.wasm\"",
     "deps-install": "yarn install && cd frontend && yarn install && cd ..",
-    "deps-install:demo_web": "yarn install && cd demo_nft_frontend && yarn install && cd .."
+    "deps-install:demo_web": "yarn install && cd demo_frontend && yarn install && cd .."
   },
   "devDependencies": {
     "near-api-js": "^1.0.0",
