--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "cd frontend && yarn start",
     "deploy": "yarn build:contract && cd contract && near dev-deploy --wasmFile ./target/wasm32-unknown-unknown/release/recur.wasm",
-    "deploy_testnet": "yarn build:contract && cd contract && near deploy --wasmFile ./target/wasm32-unknown-unknown/release/recur.wasm --accountId nft-rental.testnet",
-    "deploy_mainnet": "yarn build:contract && cd contract && NEAR_ENV=mainnet near deploy --wasmFile ./target/wasm32-unknown-unknown/release/recur.wasm --accountId nft-rental.near",
+    "deploy_testnet": "yarn build:contract && cd contract && near deploy --wasmFile ./target/wasm32-unknown-unknown/release/recur.wasm --accountId recurr.testnet",
+    "deploy_mainnet": "yarn build:contract && cd contract && NEAR_ENV=mainnet near deploy --wasmFile ./target/wasm32-unknown-unknown/release/recur.wasm --accountId recurr.near",
     "preview": "cd frontend && yarn vite preview",
     "preview:demo": "cd demo_frontend && yarn vite preview",
     "build": "yarn build:contract && yarn build:web",
